# GraphRanker

./: .gitignore  README.md  graphranker.c  meson.build
tests/: runner.py  runner.sh
